2008-01-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLExport.c:
	Fixed 1866424: Indication sending via https does not include client cert
	(patch by Peter Mellquist)
	
2008-01-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpift.h, cmpimacs.h, interopProvider.h:
	Fixed 1830845: standards naming issue for _CMPIBrokerFT.enumInstances()
	(patch by Sean Swehla)

	* cmpift.h:
	Fixed 1826571: Fixed wrong type for _CMPIBroker.brokerCapabilities
	(patch by Sean Swehla)
	
2008-01-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	Fixed 1850416: Deadlock in getObjectPath() (patch by Tim Potter)

2007-12-21  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimXmlOps.y, internalProvider.c, providerMgr.c,
	providerDrv.c, instance.c, cimXmlGen.h, providerMgr.h, cimXmlParser.h,
	cimXmlGen.c, providerRegister.c, cimXmlParser.c, README
	Fixed 1560680: sfcb property operations not supported

2007-12-05  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, array.c, cimXmlParser.c:
	Fixed 1828678: REFARRAY not supported

2007-11-14  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* httpAdapter.c: 
	Fixed 1831794: unfinished SSL handshake blocks HTTP adapter
	A 5 second timeout for the SSL handshake has been implemented.

2007-11-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, httpAdapter.c, sfcBroker.c:
	Fixed 1830770: Disallow external http connections (see README)

2007-11-05  Sven Schuetz <sven@de.ibm.com> (patch submitted by Tim Potter)

	* brokerOs.c:
	Fixed 1826149: bad spelling in brokerOs.c

2007-11-05  Sven Schuetz <sven@de.ibm.com>

	* value.c:
	Fixed 1823565: alignment problem during clone

2007-10-31  Sven Schuetz <sven@de.ibm.com>
	
	* args.c, array.c, instance.c, internalProvider.c:
	Fixed 1816606: problem with propertylist in modifyInstance

2007-10-23  Sven Schuetz <sven@de.ibm.com> (fix proposed by Rajib Saha)

	* cimcClientSfcbLocal.c:
	Fixed 1818578: sfcb local leaks memory during associator calls
