@@ -1,3 +1,8 @@
+2008-01-11 Sven Schuetz <sven@de.ibm.com>
+
+	* cimXmlRequest.c, objectImpl.c:
+	Fixed 1868692: embedded inst support broken
+
 2008-01-10  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* indCIMXMLExport.c:
